OSX only (10.9.5)
it still works fine with ubuntu linux 14.4. and windows 8
Broken: 2.76.11 (3ab50cf) - only OSX version
Worked: 2.76b
Mouse Wheel no longer zooms. Instead rotates now. Ctrl+Wheel zooms now (was panning before).
I loaded my keymap from 2.76b but that changed nothing. I was not able to get the old 2.76b behaviour back to work.