Fix T47393: mouse wheel scroll no longer zooms with mighty mouse on OS X.

Hopefully this is the last fix, using the method explained here:
https://forums.developer.apple.com/thread/31536